--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,12 @@ body{
     color: #E1E5F2;
     text-decoration: none;
 }
-.navbar-item:hover{
+.navbar-item:hover,
+.nav-menu-link_active{
     color: #b6b4b4;
-    font-size: 18px;
-    transition: all 0.25s;
+    font-size: 20px;
+    transition: all 0.50s;
+    text-shadow: 1px 1px 2px gray;
 }
 
 .btn-contacto{
@@ -75,7 +77,7 @@ body{
 @media (max-width: 768px){
     
     body{
-        margin: 90px 0px 0px; 
+        margin: 90px 0px 0px;
     }
     .navbar{
         display: flex;
@@ -84,8 +86,48 @@ body{
         margin-right: 120px;
     }
     .navbar-list{
-        display: flex;
-        list-style: none;
-        padding: 0;
+        flex-direction: column;
+        background-color: black;
+        position: fixed;
+        left: 0;
+        top: 70px;
+        width: 100%;
+        align-items: center;
+        margin: 0;
+        padding: 20px 0;
+        left: 100%;
+        transition: left 0.5s;
     }
+    .navbar-item{
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font-weight: 300;
+        line-height: 38px;
+        width: max-content;
+        font-size: 16px;
+    }
+    .btn-toggle{
+        display: block;
+    }
+    .btn-contacto{
+        display: none;
+    }
+    .navbar-list_visible{
+        left: 0;
+    }
+    .btn-toggle_pressed{
+        text-shadow: 3px 3px 3px gray;
+        transform: 0.5s;
+    }
+    .navbar-item:hover,
+    .nav-menu-link_active{
+    color: #b6b4b4;
+    font-size: 20px;
+    transition: all 0.50s;
+    text-shadow: 1px 1px 2px gray;
+}
 }
