--- a/css/style.scss
+++ b/css/style.scss
@@ -69,6 +69,8 @@ body{
     font-weight: 100;
     border-radius: 1%;
     border-color: #FFFFFF;
+    display: flex;
+    line-height: 28px;
 }
 
 .btn-toggle{
@@ -136,4 +138,17 @@ body{
     transition: all 0.50s;
     text-shadow: 1px 1px 2px gray;
 }
+}
+
+@media (max-width: 576px){
+    
+    body{
+        margin: 90px 0px 0px;
+    }
+    .navbar{
+        display: flex;
+        justify-content: space-around;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
